--- a/windows/VS2015/snappydll.vcxproj.filters
+++ b/windows/VS2015/snappydll.vcxproj.filters
@@ -15,4 +15,7 @@
     <ClInclude Include="..\config.h" />
     <ClInclude Include="..\snappy-stubs-public.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\snappydll.rc" />
+  </ItemGroup>
 </Project>
